--- a/myPortfolio/index.html
+++ b/myPortfolio/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,47 +9,51 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
+
 <body>
     <header></header>
     <section class="container">
         <!-- sections left -->
         <section id="left">
-            <img id="Pht" src="./Photo.jpg"/>
+            <img id="Pht" src="./Photo.jpg" />
         </section>
         <!-- sections right -->
         <section id="right">
             <section>
                 <h1>I'M <b class="name">Prathamesh Jadhav</b></h1>
-             </section>
+            </section>
             <section>
                 <h2>Full Stack Developer</h2>
             </section>
             <section class="profile-summary">
                 <p>
-                    A passionate Full Stack Software Developer 🚀 having an experience of building Web and Mobile applications with JavaScript / Reactjs / Nodejs / React Native and some other cool libraries and frameworks.
+                    A passionate Full Stack Software Developer 🚀 having an experience of building Web and Mobile
+                    applications with JavaScript / Reactjs / Nodejs / React Native and some other cool libraries and
+                    frameworks.
                 </p>
                 <p>
-                  These days I'm enthusiastic about the world around React, JavaScript, and Python.
+                    These days I'm enthusiastic about the world around React-native and Typescript.
                 </p>
                 <b style="color: black;">
-                  I like to learn new thing and interaction with new people to discuss innovative
-                  ideas. So I'm always there to have one with you.
+                    I like to learn new thing and interaction with new people to discuss innovative
+                    ideas and talk about fantasy things...
                 </b>
             </section>
             <section class="main">
                 <ul class="align-center li-item">
                     <li>
-                        <img id="img" src="./Profile-ICon.png"/>Profile
+                        <img id="img" src="./Profile-ICon.png" />Profile
                     </li>
                     <li>
                         <img id="img" src="./r.png" />
-                        <a href="https://drive.google.com/file/d/1nSBolo-3KuEV8hiQClP-PqKoE456LC5V/view?usp=sharing">Resume</a>
+                        <a
+                            href="https://drive.google.com/file/d/1uc5xKILFMT6h_7eoR1U3FxjiTYhI5fwr/view?usp=sharing">Resume</a>
                     </li>
                     <li>
                         <img id="img" src="./strat.png" />Work
                     </li>
                     <li>
-                        <img id="img" src="./contact.png"/>Contact
+                        <img id="img" src="./contact.png" />Contact
                     </li>
                 </ul>
             </section>
@@ -56,16 +61,18 @@
                 <div class="soical-media">
                     <a href="https://github.com/prathameshjadhav043" class="fa fa-github"></a>
                     <a href="https://www.linkedin.com/in/prathameshjadhav043/" class="fa fa-linkedin"></a>
-                    <a href="https://www.facebook.com/prathamesh.jadhav.108/" class="fa fa-facebook"></a>  
+                    <a href="https://www.facebook.com/prathamesh.jadhav.108/" class="fa fa-facebook"></a>
                     <a href="https://www.instagram.com/prathameshjadhav007/" class="fa fa-instagram"></a>
                 </div>
             </section>
-              <section class="btn">
-                <button><a href="https://drive.google.com/file/d/1nSBolo-3KuEV8hiQClP-PqKoE456LC5V/view?usp=sharing" style="color: aliceblue;">
-                  Download Resume</a>
+            <section class="btn">
+                <button><a href="https://drive.google.com/file/d/1nSBolo-3KuEV8hiQClP-PqKoE456LC5V/view?usp=sharing"
+                        style="color: aliceblue;">
+                        Download Resume</a>
                 </button>
-              </section>
-         </section>
+            </section>
+        </section>
     </section>
 </body>
+
 </html>
